--- a/iaf_task_solution.ipynb
+++ b/iaf_task_solution.ipynb
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "899793e0",
    "metadata": {},
    "outputs": [],
@@ -201,19 +201,21 @@
     "\n",
     "        self.flip = flip\n",
     "        self.ar_net = nn.Sequential(\n",
-    "            nn.Linear(1, 16),\n",
+    "            nn.Linear(1, 64),\n",
     "            nn.ReLU(),\n",
-    "            nn.Linear(16, 16),\n",
+    "            nn.Linear(64, 64),\n",
     "            nn.ReLU(),\n",
-    "            nn.Linear(16, 2) # outputs m_2 and s_2\n",
+    "            nn.Linear(64, 2) # outputs m_2 and s_2\n",
     "        )\n",
     "\n",
     "        self.m1_param = nn.Parameter(torch.randn(1))\n",
     "\n",
-    "        # initialize s1_param to 2.0 for a stable start, mentioned in the paper \n",
+    "        # initialize s1_param to 1.0 for a stable start, mentioned in the paper \n",
     "        self.s1_param = nn.Parameter(torch.full((1,), 1.0))\n",
     "\n",
-    "        # initialize the output layer of the ar_net similarly \n",
+    "        # initialize the output layer of the ar_net similarly\n",
+    "        # this helps a lot in case we don't use the batchnorm, otherwise it is not necessary\n",
+    "         \n",
     "        #nn.init.constant_(self.ar_net[-1].bias[0], 0.0) # m2 bias\n",
     "        #nn.init.constant_(self.ar_net[-1].bias[1], 1.0) # s2 bias\n",
     "        #nn.init.zeros_(self.ar_net[-1].weight)\n",
@@ -477,7 +479,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "layers = 10\n",
+    "layers = 12\n",
     "\n",
     "transforms = []\n",
     "for k in range(layers):\n",
@@ -488,8 +490,8 @@
     "transformed_distribution = TransformedDistribution(base, transforms)\n",
     "\n",
     "optimizer = torch.optim.AdamW(\n",
-    "    transformed_distribution.parameters(), lr=1e-2, weight_decay=1e-4)\n",
-    "scheduler = torch.optim.lr_scheduler.ExponentialLR(optimizer, gamma=0.9999)"
+    "    transformed_distribution.parameters(), lr=5e-3, weight_decay=0)\n",
+    "scheduler = torch.optim.lr_scheduler.ExponentialLR(optimizer, gamma=0.9998)"
    ]
   },
   {
@@ -539,216 +541,107 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step: 0      | Loss: 6.6664\n",
-      "Step: 100    | Loss: 2.7358\n",
-      "Step: 200    | Loss: 2.3542\n",
-      "Step: 300    | Loss: 2.1241\n",
-      "Step: 400    | Loss: 1.9775\n",
-      "Step: 500    | Loss: 1.8060\n",
-      "Step: 600    | Loss: 1.8981\n",
-      "Step: 700    | Loss: 1.8552\n",
-      "Step: 800    | Loss: 1.8144\n",
-      "Step: 900    | Loss: 1.8138\n",
-      "Step: 1000   | Loss: 2.0619\n",
-      "Step: 1100   | Loss: 1.9382\n",
-      "Step: 1200   | Loss: 1.8087\n",
-      "Step: 1300   | Loss: 1.8251\n",
-      "Step: 1400   | Loss: 1.8064\n",
-      "Step: 1500   | Loss: 1.7482\n",
-      "Step: 1600   | Loss: 1.7087\n",
-      "Step: 1700   | Loss: 1.7770\n",
-      "Step: 1800   | Loss: 1.8500\n",
-      "Step: 1900   | Loss: 1.7765\n",
-      "Step: 2000   | Loss: 1.6923\n",
-      "Step: 2100   | Loss: 1.9146\n",
-      "Step: 2200   | Loss: 1.7505\n",
-      "Step: 2300   | Loss: 1.8056\n",
-      "Step: 2400   | Loss: 1.6957\n",
-      "Step: 2500   | Loss: 1.7117\n",
-      "Step: 2600   | Loss: 1.7222\n",
-      "Step: 2700   | Loss: 1.8277\n",
-      "Step: 2800   | Loss: 1.7902\n",
-      "Step: 2900   | Loss: 1.6789\n",
-      "Step: 3000   | Loss: 1.6484\n",
-      "Step: 3100   | Loss: 1.6817\n",
-      "Step: 3200   | Loss: 1.7412\n",
-      "Step: 3300   | Loss: 1.6891\n",
-      "Step: 3400   | Loss: 1.7906\n",
-      "Step: 3500   | Loss: 1.6957\n",
-      "Step: 3600   | Loss: 1.6762\n",
-      "Step: 3700   | Loss: 1.7198\n",
-      "Step: 3800   | Loss: 1.7855\n",
-      "Step: 3900   | Loss: 1.6833\n",
-      "Step: 4000   | Loss: 1.7074\n",
-      "Step: 4100   | Loss: 1.7973\n",
-      "Step: 4200   | Loss: 1.7053\n",
-      "Step: 4300   | Loss: 1.7628\n",
-      "Step: 4400   | Loss: 1.7690\n",
-      "Step: 4500   | Loss: 1.7196\n",
-      "Step: 4600   | Loss: 1.6485\n",
-      "Step: 4700   | Loss: 1.7463\n",
-      "Step: 4800   | Loss: 1.7094\n",
-      "Step: 4900   | Loss: 1.6351\n",
-      "Step: 5000   | Loss: 1.7035\n",
-      "Step: 5100   | Loss: 1.6792\n",
-      "Step: 5200   | Loss: 1.6427\n",
-      "Step: 5300   | Loss: 1.6648\n",
-      "Step: 5400   | Loss: 1.6218\n",
-      "Step: 5500   | Loss: 1.6949\n",
-      "Step: 5600   | Loss: 1.6854\n",
-      "Step: 5700   | Loss: 1.7252\n",
-      "Step: 5800   | Loss: 1.6894\n",
-      "Step: 5900   | Loss: 1.6961\n",
-      "Step: 6000   | Loss: 1.6689\n",
-      "Step: 6100   | Loss: 1.6698\n",
-      "Step: 6200   | Loss: 1.6520\n",
-      "Step: 6300   | Loss: 1.6633\n",
-      "Step: 6400   | Loss: 1.7479\n",
-      "Step: 6500   | Loss: 1.6511\n",
-      "Step: 6600   | Loss: 1.7093\n",
-      "Step: 6700   | Loss: 1.6853\n",
-      "Step: 6800   | Loss: 1.6467\n",
-      "Step: 6900   | Loss: 1.7355\n",
-      "Step: 7000   | Loss: 1.7282\n",
-      "Step: 7100   | Loss: 1.6530\n",
-      "Step: 7200   | Loss: 1.7547\n",
-      "Step: 7300   | Loss: 1.7007\n",
-      "Step: 7400   | Loss: 1.6782\n",
-      "Step: 7500   | Loss: 1.6684\n",
-      "Step: 7600   | Loss: 1.6801\n",
-      "Step: 7700   | Loss: 1.7467\n",
-      "Step: 7800   | Loss: 1.7192\n",
-      "Step: 7900   | Loss: 1.6619\n",
-      "Step: 8000   | Loss: 1.6700\n",
-      "Step: 8100   | Loss: 1.6520\n",
-      "Step: 8200   | Loss: 1.6516\n",
-      "Step: 8300   | Loss: 1.7625\n",
-      "Step: 8400   | Loss: 1.6734\n",
-      "Step: 8500   | Loss: 1.6436\n",
-      "Step: 8600   | Loss: 1.6228\n",
-      "Step: 8700   | Loss: 1.7257\n",
-      "Step: 8800   | Loss: 1.6622\n",
-      "Step: 8900   | Loss: 1.6221\n",
-      "Step: 9000   | Loss: 1.6520\n",
-      "Step: 9100   | Loss: 1.6886\n",
-      "Step: 9200   | Loss: 1.6926\n",
-      "Step: 9300   | Loss: 1.6518\n",
-      "Step: 9400   | Loss: 1.6657\n",
-      "Step: 9500   | Loss: 1.6595\n",
-      "Step: 9600   | Loss: 1.6409\n",
-      "Step: 9700   | Loss: 1.6199\n",
-      "Step: 9800   | Loss: 1.6647\n",
-      "Step: 9900   | Loss: 1.6455\n",
-      "Step: 10000  | Loss: 1.6175\n",
-      "Step: 10100  | Loss: 1.6391\n",
-      "Step: 10200  | Loss: 1.5976\n",
-      "Step: 10300  | Loss: 1.6449\n",
-      "Step: 10400  | Loss: 1.6495\n",
-      "Step: 10500  | Loss: 1.6217\n",
-      "Step: 10600  | Loss: 1.6278\n",
-      "Step: 10700  | Loss: 1.6280\n",
-      "Step: 10800  | Loss: 1.6058\n",
-      "Step: 10900  | Loss: 1.6312\n",
-      "Step: 11000  | Loss: 1.6283\n",
-      "Step: 11100  | Loss: 1.6071\n",
-      "Step: 11200  | Loss: 1.6041\n",
-      "Step: 11300  | Loss: 1.6393\n",
-      "Step: 11400  | Loss: 1.6926\n",
-      "Step: 11500  | Loss: 1.6723\n",
-      "Step: 11600  | Loss: 1.6559\n",
-      "Step: 11700  | Loss: 1.5991\n",
-      "Step: 11800  | Loss: 1.5906\n",
-      "Step: 11900  | Loss: 1.6772\n",
-      "Step: 12000  | Loss: 1.6255\n",
-      "Step: 12100  | Loss: 1.6004\n",
-      "Step: 12200  | Loss: 1.6638\n",
-      "Step: 12300  | Loss: 1.6547\n",
-      "Step: 12400  | Loss: 1.6730\n",
-      "Step: 12500  | Loss: 1.6732\n",
-      "Step: 12600  | Loss: 1.6606\n",
-      "Step: 12700  | Loss: 1.6474\n",
-      "Step: 12800  | Loss: 1.6391\n",
-      "Step: 12900  | Loss: 1.6307\n",
-      "Step: 13000  | Loss: 1.6548\n",
-      "Step: 13100  | Loss: 1.6840\n",
-      "Step: 13200  | Loss: 1.6328\n",
-      "Step: 13300  | Loss: 1.6367\n",
-      "Step: 13400  | Loss: 1.5925\n",
-      "Step: 13500  | Loss: 1.6398\n",
-      "Step: 13600  | Loss: 1.6847\n",
-      "Step: 13700  | Loss: 1.5850\n",
-      "Step: 13800  | Loss: 1.6372\n",
-      "Step: 13900  | Loss: 1.6368\n",
-      "Step: 14000  | Loss: 1.5680\n",
-      "Step: 14100  | Loss: 1.6516\n",
-      "Step: 14200  | Loss: 1.6775\n",
-      "Step: 14300  | Loss: 1.7036\n",
-      "Step: 14400  | Loss: 1.6225\n",
-      "Step: 14500  | Loss: 1.5972\n",
-      "Step: 14600  | Loss: 1.6043\n",
-      "Step: 14700  | Loss: 1.6287\n",
-      "Step: 14800  | Loss: 1.6202\n",
-      "Step: 14900  | Loss: 1.6129\n",
-      "Step: 15000  | Loss: 1.5961\n",
-      "Step: 15100  | Loss: 1.6261\n",
-      "Step: 15200  | Loss: 1.6028\n",
-      "Step: 15300  | Loss: 1.6502\n",
-      "Step: 15400  | Loss: 1.6781\n",
-      "Step: 15500  | Loss: 1.6457\n",
-      "Step: 15600  | Loss: 1.6522\n",
-      "Step: 15700  | Loss: 1.7102\n",
-      "Step: 15800  | Loss: 1.6218\n",
-      "Step: 15900  | Loss: 1.5988\n",
-      "Step: 16000  | Loss: 1.6258\n",
-      "Step: 16100  | Loss: 1.6237\n",
-      "Step: 16200  | Loss: 1.5984\n",
-      "Step: 16300  | Loss: 1.6006\n",
-      "Step: 16400  | Loss: 1.6105\n",
-      "Step: 16500  | Loss: 1.6046\n",
-      "Step: 16600  | Loss: 1.6742\n",
-      "Step: 16700  | Loss: 1.6084\n",
-      "Step: 16800  | Loss: 1.6376\n",
-      "Step: 16900  | Loss: 1.6681\n",
-      "Step: 17000  | Loss: 1.6092\n",
-      "Step: 17100  | Loss: 1.6160\n",
-      "Step: 17200  | Loss: 1.5972\n",
-      "Step: 17300  | Loss: 1.6317\n",
-      "Step: 17400  | Loss: 1.6202\n",
-      "Step: 17500  | Loss: 1.6767\n",
-      "Step: 17600  | Loss: 1.6315\n",
-      "Step: 17700  | Loss: 1.5818\n",
-      "Step: 17800  | Loss: 1.6010\n",
-      "Step: 17900  | Loss: 1.6401\n",
-      "Step: 18000  | Loss: 1.6927\n",
-      "Step: 18100  | Loss: 1.6249\n",
-      "Step: 18200  | Loss: 1.6375\n",
-      "Step: 18300  | Loss: 1.6385\n",
-      "Step: 18400  | Loss: 1.6121\n",
-      "Step: 18500  | Loss: 1.6299\n",
-      "Step: 18600  | Loss: 1.6540\n",
-      "Step: 18700  | Loss: 1.5936\n",
-      "Step: 18800  | Loss: 1.6345\n",
-      "Step: 18900  | Loss: 1.6301\n",
-      "Step: 19000  | Loss: 1.6553\n",
-      "Step: 19100  | Loss: 1.5685\n",
-      "Step: 19200  | Loss: 1.6148\n",
-      "Step: 19300  | Loss: 1.6808\n",
-      "Step: 19400  | Loss: 1.6086\n",
-      "Step: 19500  | Loss: 1.6029\n",
-      "Step: 19600  | Loss: 1.6631\n",
-      "Step: 19700  | Loss: 1.6535\n",
-      "Step: 19800  | Loss: 1.6379\n",
-      "Step: 19900  | Loss: 1.5792\n",
-      "Step: 20000  | Loss: 1.6479\n",
-      "Step: 20100  | Loss: 1.6958\n",
-      "Step: 20200  | Loss: 1.6201\n",
-      "Step: 20300  | Loss: 1.6595\n",
-      "Step: 20400  | Loss: 1.6327\n",
-      "Step: 20500  | Loss: 1.6464\n",
-      "Step: 20600  | Loss: 1.5820\n",
-      "Step: 20700  | Loss: 1.6344\n",
-      "Step: 20800  | Loss: 1.6084\n",
-      "Step: 20900  | Loss: 1.6283\n"
+      "Step: 0      | Loss: 5.9500\n",
+      "Step: 100    | Loss: 2.8956\n",
+      "Step: 200    | Loss: 1.9365\n",
+      "Step: 300    | Loss: 1.8336\n",
+      "Step: 400    | Loss: 1.8326\n",
+      "Step: 500    | Loss: 1.7774\n",
+      "Step: 600    | Loss: 1.7613\n",
+      "Step: 700    | Loss: 1.9154\n",
+      "Step: 800    | Loss: 1.7879\n",
+      "Step: 900    | Loss: 1.8098\n",
+      "Step: 1000   | Loss: 1.7626\n",
+      "Step: 1100   | Loss: 1.7056\n",
+      "Step: 1200   | Loss: 1.6970\n",
+      "Step: 1300   | Loss: 1.7182\n",
+      "Step: 1400   | Loss: 1.6730\n",
+      "Step: 1500   | Loss: 1.6895\n",
+      "Step: 1600   | Loss: 1.6347\n",
+      "Step: 1700   | Loss: 1.7193\n",
+      "Step: 1800   | Loss: 1.7803\n",
+      "Step: 1900   | Loss: 1.6776\n",
+      "Step: 2000   | Loss: 1.6451\n",
+      "Step: 2100   | Loss: 1.6670\n",
+      "Step: 2200   | Loss: 1.6423\n",
+      "Step: 2300   | Loss: 1.7574\n",
+      "Step: 2400   | Loss: 1.6428\n",
+      "Step: 2500   | Loss: 1.6480\n",
+      "Step: 2600   | Loss: 1.6703\n",
+      "Step: 2700   | Loss: 1.6727\n",
+      "Step: 2800   | Loss: 1.6885\n",
+      "Step: 2900   | Loss: 1.6600\n",
+      "Step: 3000   | Loss: 1.6186\n",
+      "Step: 3100   | Loss: 1.6275\n",
+      "Step: 3200   | Loss: 1.6627\n",
+      "Step: 3300   | Loss: 1.6534\n",
+      "Step: 3400   | Loss: 1.7702\n",
+      "Step: 3500   | Loss: 1.6545\n",
+      "Step: 3600   | Loss: 1.6135\n",
+      "Step: 3700   | Loss: 1.6724\n",
+      "Step: 3800   | Loss: 1.6638\n",
+      "Step: 3900   | Loss: 1.6305\n",
+      "Step: 4000   | Loss: 1.6506\n",
+      "Step: 4100   | Loss: 1.6516\n",
+      "Step: 4200   | Loss: 1.6739\n",
+      "Step: 4300   | Loss: 1.6705\n",
+      "Step: 4400   | Loss: 1.6268\n",
+      "Step: 4500   | Loss: 1.6395\n",
+      "Step: 4600   | Loss: 1.5971\n",
+      "Step: 4700   | Loss: 1.6624\n",
+      "Step: 4800   | Loss: 1.6781\n",
+      "Step: 4900   | Loss: 1.6058\n",
+      "Step: 5000   | Loss: 1.7020\n",
+      "Step: 5100   | Loss: 1.6072\n",
+      "Step: 5200   | Loss: 1.6029\n",
+      "Step: 5300   | Loss: 1.6024\n",
+      "Step: 5400   | Loss: 1.5840\n",
+      "Step: 5500   | Loss: 1.6250\n",
+      "Step: 5600   | Loss: 1.6262\n",
+      "Step: 5700   | Loss: 1.6310\n",
+      "Step: 5800   | Loss: 1.6125\n",
+      "Step: 5900   | Loss: 1.6564\n",
+      "Step: 6000   | Loss: 1.6426\n",
+      "Step: 6100   | Loss: 1.6199\n",
+      "Step: 6200   | Loss: 1.7600\n",
+      "Step: 6300   | Loss: 1.5990\n",
+      "Step: 6400   | Loss: 1.6530\n",
+      "Step: 6500   | Loss: 1.5844\n",
+      "Step: 6600   | Loss: 1.6446\n",
+      "Step: 6700   | Loss: 1.5839\n",
+      "Step: 6800   | Loss: 1.6074\n",
+      "Step: 6900   | Loss: 1.6673\n",
+      "Step: 7000   | Loss: 1.6267\n",
+      "Step: 7100   | Loss: 1.6071\n",
+      "Step: 7200   | Loss: 1.6306\n",
+      "Step: 7300   | Loss: 1.6480\n",
+      "Step: 7400   | Loss: 1.6388\n",
+      "Step: 7500   | Loss: 1.6578\n",
+      "Step: 7600   | Loss: 1.6625\n",
+      "Step: 7700   | Loss: 1.6793\n",
+      "Step: 7800   | Loss: 1.6358\n",
+      "Step: 7900   | Loss: 1.6028\n",
+      "Step: 8000   | Loss: 1.6271\n",
+      "Step: 8100   | Loss: 1.6036\n",
+      "Step: 8200   | Loss: 1.6075\n",
+      "Step: 8300   | Loss: 1.6273\n",
+      "Step: 8400   | Loss: 1.6394\n",
+      "Step: 8500   | Loss: 1.6351\n",
+      "Step: 8600   | Loss: 1.5919\n",
+      "Step: 8700   | Loss: 1.6620\n",
+      "Step: 8800   | Loss: 1.6094\n",
+      "Step: 8900   | Loss: 1.6149\n",
+      "Step: 9000   | Loss: 1.5929\n",
+      "Step: 9100   | Loss: 1.6392\n",
+      "Step: 9200   | Loss: 1.6404\n",
+      "Step: 9300   | Loss: 1.6121\n",
+      "Step: 9400   | Loss: 1.6323\n",
+      "Step: 9500   | Loss: 1.6462\n",
+      "Step: 9600   | Loss: 1.6063\n",
+      "Step: 9700   | Loss: 1.6028\n",
+      "Step: 9800   | Loss: 1.5929\n",
+      "Step: 9900   | Loss: 1.5962\n",
+      "Step: 10000  | Loss: 1.5957\n"
      ]
     }
    ],
@@ -759,7 +652,7 @@
     "    transformed_distribution,\n",
     "    optimizer,\n",
     "    scheduler,\n",
-    "    steps=21000,      \n",
+    "    steps=10100,      \n",
     "    batch_size=2048,\n",
     "    log_interval=100,\n",
     ")"
