remove redundant operation

--- a/iaf_task_solution.ipynb
+++ b/iaf_task_solution.ipynb
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "d4a865dd",
    "metadata": {},
    "outputs": [],
@@ -383,7 +383,7 @@
     "        elif y is not None:\n",
     "            self.reverse(y)\n",
     "        \n",
-    "        return -(self.log_gamma - 0.5 * torch.log(self.var)).sum(-1).mean()"
+    "        return -(self.log_gamma - 0.5 * torch.log(self.var)).sum(-1) #.mean() is redundant, since the value is a scalar after .sum(-1)"
    ]
   },
   {
