--- a/iaf_task_solution.ipynb
+++ b/iaf_task_solution.ipynb
@@ -224,7 +224,7 @@
     "    def forward(self, x):\n",
     "        \"\"\"\n",
     "        Args:\n",
-    "            x: The input tensor z from the base distribution. Shape (B, 2).\n",
+    "            x: The input tensor from the base distribution. Shape (B, 2).\n",
     "\n",
     "        Returns:\n",
     "            The transformed tensor y. Shape (B, 2).\n",
@@ -258,10 +258,10 @@
     "    def reverse(self, y):\n",
     "        \"\"\"\n",
     "        Args:\n",
-    "            y: The input tensor y from the data distribution. Shape (B, 2).\n",
+    "            y: The input tensor from the data distribution. Shape (B, 2).\n",
     "\n",
     "        Returns:\n",
-    "            The transformed tensor z (x_base). Shape (B, 2).\n",
+    "            The transformed tensor x. Shape (B, 2).\n",
     "        \"\"\"\n",
     "\n",
     "        _y = y\n",
@@ -292,8 +292,8 @@
     "    def log_determinant(self, x=None, y=None):\n",
     "        \"\"\"\n",
     "        Args:\n",
-    "            x: The tensor z from the base distribution. Shape (B, 2).\n",
-    "            y: The tensor y from the data distribution. Shape (B, 2).\n",
+    "            x: The tensor from the base distribution. Shape (B, 2).\n",
+    "            y: The tensor from the data distribution. Shape (B, 2).\n",
     "\n",
     "        Returns:\n",
     "            The log-determinant for each item in the batch. Shape (B,).\n",
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "d4a865dd",
    "metadata": {},
    "outputs": [],
